--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,5 +36,6 @@ jobs:
 
     - name: Coveralls
       uses: coverallsapp/github-action@master
+      run: coveralls
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
